--- a/docker/conf/site.conf
+++ b/docker/conf/site.conf
@@ -1,12 +1,12 @@
 server {
     server_name redforma.pe;
-    root /www/public;
+    root /www/web;
 
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files $uri /app_dev.php$is_args$args;
     }
 
-    location ~ ^/index\.php(/|$) {
+    location ~ ^/app_dev\.php(/|$) {
         fastcgi_pass php7:9000;
 
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
