--- a/app/Resources/package.json
+++ b/app/Resources/package.json
@@ -4,7 +4,8 @@
   "description": "frontend redforma",
   "main": "src/app.js",
   "scripts": {
-    "build":"webpack",
+    "build": "rm -rf ./../../web/assets/* && webpack -p",
+    "build.prod": "rm -rf ./../../web/assets/* && NODE_ENV=production webpack -p",
     "start": "webpack-dev-server --hot"
   },
   "keywords": [],
@@ -15,13 +16,16 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.24.1",
+    "html-webpack-plugin-return": "^2.0.6",
+    "node-sass": "^3.10.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2",
-    "node-sass": "^3.10.0"
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "jp-router": "^1.0.0",
