--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+app_config:
+    resource: "@AppBundle/Resources/config/routes.yml"
+    type: ~
