--- a/src/Core/Config/config.yml
+++ b/src/Core/Config/config.yml
@@ -1,9 +1,13 @@
 parameters:
-  hi: Andy
+    company_num_pagination: 20
 
 services:
 
     ## Services
+    company.service:
+      class: Redforma\Reviews\Application\Service\CompanyService
+      arguments: ['@company.repository', '@company.category.repository']
+
     user.identity:
       class: Redforma\Identity\Application\Service\UserService
       arguments: ['@user.repository', '@user.role.repository', '@auth.authentifier', '@auth.encryption']
@@ -23,3 +27,11 @@ services:
     user.role.repository:
         class: Redforma\Identity\Infrastructure\Persistence\Doctrine\DoctrineRoleRepository
         arguments: [Redforma\Identity\Domain\Model\User\Role, '@doctrine.orm.entity_manager']
+
+    company.repository:
+        class: Redforma\Reviews\Infrastructure\Persistence\Doctrine\DoctrineCompanyRepository
+        arguments: [Redforma\Reviews\Domain\Model\Company\Company, '@doctrine.orm.entity_manager']
+
+    company.category.repository:
+        class: Redforma\Reviews\Infrastructure\Persistence\Doctrine\DoctrineCategoryRepository
+        arguments: [Redforma\Reviews\Domain\Model\Company\Category, '@doctrine.orm.entity_manager']
